# ProyectosEscuela

Curso completo STraductores/: Parte1Proyecto.odt  Parte2Proyecto.odt  Practica 2.odt  Practica 4.odt  Tarea8}.odt
Curso completo STraductores/Practica01/: AnalizadorLexico.cpp  AnalizadorLexico.h  (+5 more)
Curso completo STraductores/Practica5/: AnalizadorLexico.cpp  AnalizadorLexico.h  AnalizadorSintactico.cpp  AnalizadorSintactico.h  CMakeLists.txt  main  main.cpp  prueba.txt
Proyecto Contribuyentes/: CMakeLists.txt  Contribuyente.cpp  Contribuyente.h  Contribuyentes.txt  LEER.txt  Manager.cpp  Manager.h  main  main.cpp  proyectoxd.cbp  proyectoxd.depend  proyectoxd.layout
Proyecto Reparaciones Ing Software/: .~lock.diccionario de datos indv.ods#  .~lock.diccionario de datos.ods#  Propuestas.odt  diccionario de datos indv.ods  diccionario de datos.ods
Proyecto Turismo/: Makefile  administrarlugar.h  administrarlugar.ui  adminlugar.cpp  adminlugar.h  adminlugar.ui  adminusuario.cpp  adminusuario.h  adminusuario.ui  agregardireccion.cpp  agregardireccion.h  agregardireccion.ui  buscadorprincipal.cpp  buscadorprincipal.h  buscadorprincipal.ui  comentario.cpp  comentario.h  comentario.ui  confirmacion.cpp  confirmacion.h  confirmacion.ui  crearadministrador.cpp  crearadministrador.h  crearadministrador.ui  crearlugar.cpp  crearlugar.h  crearlugar.ui  crearusuario.cpp  crearusuario.h  crearusuario.ui  detallereporte.cpp  detallereporte.h  detallereporte.ui  detallereportel.cpp  detallereportel.h  detallereportel.ui  dialog.ui  editarlugar.cpp  editarlugar.h  editarlugar.ui  (+124 more)
(+42 files in other folders)
